Fix familiar data storage